--- a/src/components/Hero/Heroinv.astro
+++ b/src/components/Hero/Heroinv.astro
@@ -10,8 +10,8 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/hero.webp";
-import heroImageMobile from "@images/hero.webp";
+import heroImage from "@images/Invitacionsl.png";
+import heroImageMobile from "@images/Invitacionsl.png";
 import markopen from "@images/mark_open.svg";
 import markclose from "@images/mark_close.svg";
 ---
@@ -44,7 +44,7 @@ import markclose from "@images/mark_close.svg";
   <div
     class="site-container w-full gap-10 py-44 text-center md:py-52 md:text-center"
   >
-    <!-- Hero text -->
+    <!-- Hero text 
     <div class="my-auto mx-auto max-w-[800px] flex-col text-base-50 text-center">
       <h1
         class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
@@ -75,7 +75,7 @@ import markclose from "@images/mark_close.svg";
           Confirmación de asistencia
         </Button>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 <style>
