--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -6,7 +6,7 @@ const TIMESTAMP_END = 1749402000;
 ---
 
 <section
-    class="max-w-6xl desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#A7727D]"
+    class="max-w-6xl desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#F5F5F5]"
 >
         <Title title="Faltan" />
     <div data-date={TIMESTAMP_END} class="flex flex-row mt-5">
@@ -83,3 +83,8 @@ const TIMESTAMP_END = 1749402000;
     }
     init();
 </script>
+<style>
+section {
+        background-color: #a7727d;
+    }
+</style>
