Estilo section countdown

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -6,35 +6,35 @@ const TIMESTAMP_END = 1749402000;
 ---
 
 <section
-    class="max-w-6xl desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#F5F5F5]"
+    class="w-full desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#F5F5F5]"
 >
         <Title title="Faltan" />
     <div data-date={TIMESTAMP_END} class="flex flex-row mt-5">
-        <div class="border-r-[1px] flex flex-col px-5 border-[#6F6F6E]">
+        <div class="border-r-[1px] flex flex-col px-5 border-[#a7727d]">
             <span data-days class="text-[#89713E] text-4xl desktop:text-5xl">
                 00
             </span>
-            <span class="text-[#6F6F6E] desktop:text-[25px] "> DIAS </span>
+            <span class="text-[#e4e0db] desktop:text-[25px] "> DIAS </span>
         </div>
 
-        <div class="border-r-[1px] flex flex-col px-5 border-[#6F6F6E]">
+        <div class="border-r-[1px] flex flex-col px-5 border-[#a7727d]">
             <span data-hours class="text-[#89713E] text-4xl desktop:text-5xl">
                 00
             </span>
-            <span class="text-[#6F6F6E] desktop:text-[25px]"> HS </span>
+            <span class="text-[#e4e0db] desktop:text-[25px]"> HS </span>
         </div>
 
-        <div class="border-r-[1px] flex flex-col px-5 border-[#6F6F6E]">
-            <span data-minutes class="text-[#89713E] text-4xl desktop:text-5xl"
+        <div class="border-r-[1px] flex flex-col px-5 border-[#a7727d]">
+            <span data-minutes class="text-[#e4e0db] text-4xl desktop:text-5xl"
                 >00
             </span>
-            <span class="text-[#6F6F6E] desktop:text-[25px]"> MIN </span>
+            <span class="text-[#e4e0db] desktop:text-[25px]"> MIN </span>
         </div>
         <div class="px-5 flex flex-col">
             <span data-seconds class="text-[#89713E] text-4xl desktop:text-5xl">
                 00
             </span>
-            <span class="text-[#6F6F6E] desktop:text-[25px]"> SEG </span>
+            <span class="text-[#e4e0db] desktop:text-[25px]"> SEG </span>
         </div>
     </div>
     <Divider />
@@ -85,6 +85,7 @@ const TIMESTAMP_END = 1749402000;
 </script>
 <style>
 section {
-        background-color: #a7727d;
+        width: 100%;
+        background-color: #f2eae0;
     }
 </style>
