Fuente y tamaño desktop countdown

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -11,27 +11,27 @@ const TIMESTAMP_END = 1749402000;
         <Title title="Cuánto falta para la boda" />
     <div data-date={TIMESTAMP_END} class="flex flex-row mt-5">
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
-            <span data-days class="text-[#a7727d] text-4xl desktop:text-5xl">
+            <span data-days class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
             <span class="text-[#a48869] desktop:text-[25px] "> DIAS </span>
         </div>
 
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
-            <span data-hours class="text-[#a7727d] text-4xl desktop:text-5xl">
+            <span data-hours class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
             <span class="text-[#a48869] desktop:text-[25px]"> HS </span>
         </div>
 
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
-            <span data-minutes class="text-[#a7727d] text-4xl desktop:text-5xl"
-                >00
+            <span data-minutes class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
+                00
             </span>
             <span class="text-[#a48869] desktop:text-[25px]"> MIN </span>
         </div>
         <div class="px-5 flex flex-col">
-            <span data-seconds class="text-[#a7727d] text-4xl desktop:text-5xl">
+            <span data-seconds class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
             <span class="text-[#a48869] desktop:text-[25px]"> SEG </span>
