--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -8,33 +8,33 @@ const TIMESTAMP_END = 1749402000;
 <section
     class="w-full desktop:px-16 pt-20 pb-10 text-center mx-auto flex flex-col items-center justify-center background-[#F5F5F5]"
 >
-        <Title title="Cuánto falta para la boda" />
+        <Title title="Cuánto falta para la boda"/>
     <div data-date={TIMESTAMP_END} class="flex flex-row mt-5">
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
             <span data-days class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
-            <span class="text-[#a48869] desktop:text-[25px] "> DIAS </span>
+            <span class="text-[#a48869] desktop:text-[25px] font-heading"> DIAS </span>
         </div>
 
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
             <span data-hours class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
-            <span class="text-[#a48869] desktop:text-[25px]"> HS </span>
+            <span class="text-[#a48869] desktop:text-[25px] font-heading"> HS </span>
         </div>
 
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
             <span data-minutes class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
-            <span class="text-[#a48869] desktop:text-[25px]"> MIN </span>
+            <span class="text-[#a48869] desktop:text-[25px] font-heading"> MIN </span>
         </div>
         <div class="px-5 flex flex-col">
             <span data-seconds class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
-            <span class="text-[#a48869] desktop:text-[25px]"> SEG </span>
+            <span class="text-[#a48869] desktop:text-[25px] font-heading"> SEG </span>
         </div>
     </div>
     <Divider />
