--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -21,7 +21,7 @@ const TIMESTAMP_END = 1749402000;
             <span data-hours class="text-[#a7727d] text-4xl desktop:text-7xl font-decorative">
                 00
             </span>
-            <span class="text-[#a48869] desktop:text-[25px] font-heading"> HS </span>
+            <span class="text-[#a48869] desktop:text-[25px] font-heading"> HORAS </span>
         </div>
 
         <div class="border-r-[1px] flex flex-col px-5 border-[#ffffff]">
