--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -4,6 +4,7 @@ import Button from "@components/Button/Button.astro";
 ---
 
 <form
+  action="api/send"
   id="contact-form"
   name="contact form"
   class="flex h-full flex-col justify-between gap-4"
