--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -9,6 +9,7 @@ import Button from "@components/Button/Button.astro";
   id="contact-form"
   name="contact form"
   class="flex h-full flex-col justify-between gap-4"
+  enctype="multipart/form-data"
 >
   <input type="hidden" name="form-name" value="contact" />
   <div>
