--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -5,11 +5,9 @@ import Button from "@components/Button/Button.astro";
 
 <form
   action="api/send"
-  method="POST"
   id="contact-form"
   name="contact form"
   class="flex h-full flex-col justify-between gap-4"
-  enctype="multipart/form-data"
 >
   <input type="hidden" name="form-name" value="contact" />
   <div>
@@ -74,7 +72,7 @@ import Button from "@components/Button/Button.astro";
       class="form__input"
       id="contact-message"
       rows="6"
-      placeholder="Déjanos un mensaje cariñoso, una consulta o cualquier restricción alimenticia que tengas"
+      placeholder="Hola, me gustaría confirmar mi asistencia..."
       required>
     </textarea>
   </div>
