--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -10,15 +10,15 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/Map.jpg";
-import heroImageMobile from "@images/Map.jpg";
+import heroImage from "@images/Map2.jpg";
+import heroImageMobile from "@images/Map2.jpg";
 import markopen from "@images/mark_open.svg";
 import markclose from "@images/mark_close.svg";
 ---
 
 <section
   id="hero"
-  class="relative flex min-h-[100lvh] w-full bg-black bg-opacity-50"
+  class="relative flex min-h-[100lvh] w-full"
 >
   <!-- background image -->
   <div class="absolute -z-20 h-full min-h-full w-full overflow-hidden">
