Refactor Hero component text and remove unused SVG imports

--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -12,8 +12,8 @@ import Button from "@components/Button/Button.astro";
 // images
 import heroImage from "@images/Map2.jpg";
 import heroImageMobile from "@images/Map2.jpg";
-import markopen from "@images/mark_open.svg";
-import markclose from "@images/mark_close.svg";
+//import markopen from "@images/mark_open.svg";
+//import markclose from "@images/mark_close.svg";
 ---
 
 <section
@@ -47,24 +47,15 @@ import markclose from "@images/mark_close.svg";
     <!-- Hero text -->
     <div class="my-auto mx-auto max-w-[800px] flex-col text-base-50 text-center">
       <h1
-        class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
-      >
-        08.06.2025
-
-      </h1>
-      <h1
       class="font-heading-1 text-pretty text-4xl font-semibold drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
       >
-      Nuria & Cristian
-
+        PASAPORTE
       </h1>
-      <img src={markopen.src} class="w-10 mx-auto" />
       <p
         class="mt-8 text-pretty text-lg tracking-widest drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl mx-auto"
       >
-        En cada mirada, en cada gesto, en cada silencio compartido, encontramos la esencia de lo que significa amarnos..
+        A NUESTRA BODA
       </p>
-      <img src={markclose.src} class="w-10 mx-auto" />
       <div class="mt-10 flex flex-wrap justify-center gap-4">
         <Button
           variant="ghost"
