Update portfolio pages with Spanish text and add PortfolioThreeCards component

--- a/src/pages/invitaciontrip.astro
+++ b/src/pages/invitaciontrip.astro
@@ -7,6 +7,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import Heroinvtrip from "@components/Hero/Heroinvtrip.astro";
 import Contact from "@components/Contact/Contact.astro";
 import Countdown from "../components/Countdown.astro";
+import PortfolioThreeCards from "@components/Portfolio/PortfolioThreeCards.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
 import Message from "@components/Message.astro";
 
@@ -20,6 +21,7 @@ import siteData from "@config/siteData.json";
   navStartStyle="white"
 >
     <Heroinvtrip />
+    <PortfolioThreeCards />
     <Countdown />
     <PrincipalDate />
     <Message />
