--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -22,8 +22,7 @@ const portfolios = await getCollection("portfolios", ({ data }) => {
   <div class="site-container pt-24 md:pt-36">
     <div class="mx-auto max-w-6xl text-center">
       <h1 class="h2 text-pretty uppercase">
-        The moments you'll want to relive in a timeless, romantic, and artistic
-        style.
+        Nuestros mejores momentos a lo largo del tiempo.
       </h1>
     </div>
     <PortfolioGrid portfolios={portfolios} />
