Reemplazar componente TestimonialQuote por Testimonials en la página de invitación

--- a/src/pages/invitaciontrip.astro
+++ b/src/pages/invitaciontrip.astro
@@ -7,7 +7,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import Heroinvtrip from "@components/Hero/Heroinvtrip.astro";
 import Contact from "@components/Contact/Contact.astro";
 import Countdown from "../components/Countdown.astro";
-import TestimonialQuote from "@components/Testimonials/TestimonialQuote.astro";
+import Testimonials from "@components/Testimonials/Testimonials.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
 import Message from "@components/Message.astro";
 
@@ -21,7 +21,7 @@ import siteData from "@config/siteData.json";
   navStartStyle="white"
 >
     <Heroinvtrip />
-    <TestimonialQuote />
+    <Testimonials />
     <Countdown />
     <PrincipalDate />
     <Message />
