--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -10,8 +10,8 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/Map2.jpg";
-import heroImageMobile from "@images/Map2.jpg";
+import heroImage from "@images/visa.jpg";
+import heroImageMobile from "@images/visa.jpg";
 //import markopen from "@images/mark_open.svg";
 //import markclose from "@images/mark_close.svg";
 ---
