--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -11,7 +11,7 @@ import Button from "@components/Button/Button.astro";
 
 // images
 import heroImage from "@images/visa.jpg";
-import heroImageMobile from "@images/visa.jpg";
+import heroImageMobile from "@images/visam.jpg";
 //import markopen from "@images/mark_open.svg";
 //import markclose from "@images/mark_close.svg";
 ---
