ajuste de fondo en movil

--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -11,7 +11,7 @@ import Button from "@components/Button/Button.astro";
 
 // images
 import heroImage from "@images/visa.jpg";
-import heroImageMobile from "@images/visam.jpg";
+import heroImageMobile from "@images/visa.jpg";
 //import markopen from "@images/mark_open.svg";
 //import markclose from "@images/mark_close.svg";
 ---
@@ -32,7 +32,7 @@ import heroImageMobile from "@images/visam.jpg";
     />
     <Image
       src={heroImageMobile}
-      class="h-auto min-h-full w-full object-cover sm:hidden"
+      class="h-auto min-h-full w-full object-contain sm:hidden"
       alt="wedding"
       aria-hidden="true"
       loading="eager"
