volver imagen a su tamaño

--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -32,7 +32,7 @@ import heroImageMobile from "@images/visa.jpg";
     />
     <Image
       src={heroImageMobile}
-      class="h-auto min-h-full w-full object-contain sm:hidden"
+      class="h-auto min-h-full w-full object-cover sm:hidden"
       alt="wedding"
       aria-hidden="true"
       loading="eager"
