--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -28,7 +28,7 @@ import novia    from '@images/novia.jpg';
     >
         <MessageCard
             person="Nuria"
-            message={`Queremos compartir con cada uno de vosotros un día muy especial para nosotros, una de las decisiones más importantes de nuestra vida. Nos vamos a sentir afortunados de estar rodeados de nuestros seres queridos y amigos, con quienes hemos tenido la oportunidad de compartir momentos inolvidables. Esperamos que nos podais acompañar y paseis un día memorable.`}
+            message={`Queremos compartir con cada uno de vosotros un día muy especial para nosotros, una de las decisiones más importantes de nuestra vida. Nos vamos a sentir afortunados de estar rodeados de nuestros seres queridos y amigos, con quienes hemos tenido la oportunidad de compartir momentos inolvidables. Esperamos que nos acompañeis y paseis un día memorable.`}
             image={novia.src}
         />
 
