--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -112,4 +112,7 @@ import destino from '@images/Icono-viajes-boda-1.png';
     button:hover {
         background-color: rgb(195 128 11 / 73%);
     }
+    section{
+        background-image: url('/images/Fondo-6-Pasaporte.jpg');
+    }
 </style>
