--- a/src/components/Portfolio/PortfolioThreeCards.astro
+++ b/src/components/Portfolio/PortfolioThreeCards.astro
@@ -28,7 +28,7 @@ const firstThreePortfolios = sortedPortfolios.slice(0, 3);
 <section id="portfolio" class="site-container mt-12 scroll-mt-10 py-8 md:py-12">
   <div class="mx-auto max-w-6xl text-center">
     <h2 class="h2 text-pretty uppercase">
-      Nuestros mejores momentos a lo largo del tiempo.
+      Próximamente las mejores imágenes de la boda.
     </h2>
   </div>
   <div class="grid gap-10 pt-8 md:grid-cols-2 md:pt-12">
@@ -49,6 +49,6 @@ const firstThreePortfolios = sortedPortfolios.slice(0, 3);
   </div>
 
   <div class="mt-12 flex justify-center">
-    <Button href="/portfolio" variant="outline">Todos nuestros momentos</Button>
+    <Button href="/portfolio" variant="outline">Mejores momentos</Button>
   </div>
 </section>
