--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -18,7 +18,7 @@ import iglesia from '@images/Icono-Boho-1.png';
             <h3 class="font-parisienne text-5xl text-color01">Itinerario</h3>
         </div>
         <ul>
-            <img src={iglesis.src} class="w-32 mx-auto" alt="icono iglesia" />
+            <img src={iglesia.src} class="w-32 mx-auto" alt="icono iglesia" />
             <li>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Domingo 08 de Junio - 17hs
