Agregar importación del componente Divider en PrincipalDate.astro

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 
 // components
-
+import Divider from "@/components/Divider.astro";
 // images
 import destino from '@images/Icono-viajes-boda-1.png';
 import iglesia from '@images/Icono-Boho-1.png';
