--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -3,33 +3,37 @@ import { Image } from 'astro:assets';
 
 // components
 import Divider from "@/components/Divider.astro";
-// images
-import destino from '@images/Icono-viajes-boda-1.png';
-import iglesia from '@images/Icono-Boho-1.png';
 
+// images
+import maletas from '@images/Icono-viajes-boda-7.png';
+import destino from '@images/Icono-viajes-boda-1.png';
 ---
 
 
 
-<section class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center mx-auto">
+<section
+    class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center mx-auto"
+>
     <div class="desktop:w-[45%]">
-        <img src={destino.src} class="w-32 mx-auto" alt="icono de fiesta" />
+        <img src={maletas.src} class="w-32 mx-auto" alt="icono ceremonia" />
         <div class="title-pd py-4">
-            <h3 class="font-parisienne text-5xl text-color01">Itinerario</h3>
+            <h3 class="font-parisienne text-5xl text-color01">Escala</h3>
         </div>
         <ul>
-            <img src={iglesia.src} class="w-32 mx-auto" alt="icono iglesia" />
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Día</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Domingo 08 de Junio - 17hs
                 </span>
             </li>
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Lugar</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Iglesia de la Asunción Molina de Segura
                 </span>
             </li>
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Dirección</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Pl. Iglesia, s/n, 30500 Molina de Segura, Murcia
                 </span>
@@ -37,64 +41,28 @@ import iglesia from '@images/Icono-Boho-1.png';
                     ¿Cómo llegar?
                 </a>
             </li>
+        </ul>
+    </div>
+    <div class="desktop:w-[45%]">
+        <img src={destino.src} class="w-32 mx-auto" alt="icono de fiesta" />
+        <div class="title-pd py-4">
+            <h3 class="font-parisienne text-5xl text-color01">Cena & Fiesta</h3>
+        </div>
+        <ul>
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Día</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Domingo 08 de Junio - 19:30hs
                 </span>
             </li>
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Destino</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Finca Los Sauces
                 </span>
             </li>
             <li>
+                <p class="text-[28px] text-[#6F6F6E] font-medium">Dirección</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Ctra. De la Palma, km 4, 5, 30395 Cartagena, Murcia
                 </span>
-                <a href="https://g.co/kgs/H33srLC" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl block mt-2">
-                    ¿Cómo llegar?
-                </a>
-            </li>
-        </ul>
-    </div>
-</section>
-<Divider />
-<script
-    type="text/javascript"
-    src="https://cdn.addevent.com/libs/atc/1.6.1/atc.min.js"
-    async
-    defer>
-</script>
-<style>
-    .title-pd {
-        border-top: 1px solid #c6c6c5;
-        border-bottom: 1px solid #c6c6c5;
-    }
-
-    ul {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-    }
-    li {
-        display: flex;
-        flex-direction: column;
-        gap: 2rem;
-    }
-    button {
-        background-color: rgb(195 128 11 / 73%);
-        @apply w-[280px];
-        @apply mx-auto;
-    }
-    a {
-        background-color: rgba(195, 128, 11, 0.459);
-        @apply w-[280px];
-        @apply mx-auto;
-    }
-    a:hover {
-        background-color: rgb(195 128 11 / 73%);
-    }
-    button:hover {
-        background-color: rgb(195 128 11 / 73%);
-    }
-</style>
