Agregar enlace "¿Cómo llegar?" y estilos para mejorar la presentación en PrincipalDate.astro

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -66,3 +66,50 @@ import destino from '@images/Icono-viajes-boda-1.png';
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Ctra. De la Palma, km 4, 5, 30395 Cartagena, Murcia
                 </span>
+                <a href="https://g.co/kgs/H33srLC" target="_blank" class="bg-color01 text-color02 py-3 rounded-3xl block mt-2">
+                    ¿Cómo llegar?
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
+<Divider />
+<script
+    type="text/javascript"
+    src="https://cdn.addevent.com/libs/atc/1.6.1/atc.min.js"
+    async
+    defer>
+</script>
+<style>
+    .title-pd {
+        border-top: 1px solid #c6c6c5;
+        border-bottom: 1px solid #c6c6c5;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    li {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    button {
+        background-color: rgb(195 128 11 / 73%);
+        @apply w-[280px];
+        @apply mx-auto;
+    }
+    a {
+        background-color: rgba(195, 128, 11, 0.459);
+        @apply w-[280px];
+        @apply mx-auto;
+    }
+    a:hover {
+        background-color: rgb(195 128 11 / 73%);
+    }
+    button:hover {
+        background-color: rgb(195 128 11 / 73%);
+    }
+</style>
