Agregar componente Itinerario y actualizar PrincipalDate.astro para mostrar imágenes correctas

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -5,7 +5,6 @@ import { Image } from 'astro:assets';
 import Divider from "@/components/Divider.astro";
 
 // images
-import maletas from '@images/Icono-viajes-boda-7.png';
 import destino from '@images/Icono-viajes-boda-1.png';
 ---
 
@@ -15,7 +14,7 @@ import destino from '@images/Icono-viajes-boda-1.png';
     class="max-w-6xl desktop:mx-auto mx-4 text-center flex gap-20 desktop:gap-10 flex-wrap justify-center items-center mx-auto"
 >
     <div class="desktop:w-[45%]">
-        <img src={maletas.src} class="w-32 mx-auto" alt="icono ceremonia" />
+        <img src={destino.src} class="w-32 mx-auto" alt="icono ceremonia" />
         <div class="title-pd py-4">
             <h3 class="font-parisienne text-5xl text-color01">Escala</h3>
         </div>
