--- a/src/pages/invitaciontrip.astro
+++ b/src/pages/invitaciontrip.astro
@@ -10,6 +10,7 @@ import Countdown from "../components/Countdown.astro";
 import Testimonials from "@components/Testimonials/Testimonials.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
 import Message from "@components/Message.astro";
+import Itinerario from "@components/Testimonials/Itinerario.astro";
 
 // data
 import siteData from "@config/siteData.json";
@@ -25,5 +26,6 @@ import siteData from "@config/siteData.json";
     <Countdown />
     <PrincipalDate />
     <Message />
+    <Itinerario />
     <Contact />
 </BaseLayout>
