Agregar título "Itinerario" y fondo de sección en el componente Itinerario.astro

--- a/src/components/Testimonials/Itinerario.astro
+++ b/src/components/Testimonials/Itinerario.astro
@@ -21,6 +21,7 @@ import maletas from '@images/Icono-viajes-boda-7.png';
 >
     <div class="desktop:w-[45%]">
         <img src={maletas.src} class="w-32 mx-auto" alt="icono ceremonia" />
+        <h1 class="font-parisienne text-5xl text-color01">Itinerario</h1>
         <ul>
             <li>
                 <img src={iglesia.src} class="w-32 mx-auto" alt="icono ceremonia" />
@@ -87,5 +88,14 @@ import maletas from '@images/Icono-viajes-boda-7.png';
     }
     button:hover {
         background-color: rgb(195 128 11 / 73%);
+    }
+    section {
+        background-image: url('@images/Fondo-6-Pasaporte.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;
     }
 </style>
