Actualizar título de imagen en MessageCard y cambiar fondo de sección en Itinerario a una nueva imagen de mapa

--- a/src/components/MessageCard.astro
+++ b/src/components/MessageCard.astro
@@ -6,7 +6,7 @@ const { person, image, message } = Astro.props;
     <div
         class="h-48 desktop:h-auto desktop:w-48 flex-none bg-cover rounded-t desktop:rounded-t-none desktop:rounded-l text-center overflow-hidden"
         style={`background-image: url('${image}')`}
-        title="Imagen de ${person}"
+        title="Imagen de novia/o"
     >
     </div>
     <div
