--- a/src/components/Testimonials/Itinerario.astro
+++ b/src/components/Testimonials/Itinerario.astro
@@ -12,6 +12,7 @@ import comida from '@images/Icono-Boho-5.png';
 import fiesta from '@images/Icono-Boho-7.png';
 import anillos from '@images/Icono-Boho-10.png';
 import maletas from '@images/Icono-viajes-boda-7.png';
+import mapa from '@images/Map3.jpg';
 ---
 
 
@@ -90,7 +91,7 @@ import maletas from '@images/Icono-viajes-boda-7.png';
         background-color: rgb(195 128 11 / 73%);
     }
     section {
-        background-image: url('@images/Fondo-6-Pasaporte.jpg');
+        background-image: url(${mapa.src});
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
