Actualizar imagen de fondo en el componente Itinerario.astro

--- a/src/components/Testimonials/Itinerario.astro
+++ b/src/components/Testimonials/Itinerario.astro
@@ -12,7 +12,7 @@ import comida from '@images/Icono-Boho-5.png';
 import fiesta from '@images/Icono-Boho-7.png';
 import anillos from '@images/Icono-Boho-10.png';
 import maletas from '@images/Icono-viajes-boda-7.png';
-import mapa from '@images/Map3.jpg';
+import mapa from '@images/Map2.jpg';
 ---
 
 
@@ -91,7 +91,7 @@ import mapa from '@images/Map3.jpg';
         background-color: rgb(195 128 11 / 73%);
     }
     section {
-        background-image: url(${mapa.src});
+        background-image: url('@images/Map2.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
