Actualizar mensajes y títulos en los componentes Message y PrincipalDate, agregar nuevo componente Itinerario y eliminar el antiguo.

--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -15,11 +15,11 @@ import novia    from '@images/novia.jpg';
     <div
         class="max-w-[1140px] phone:w-full phone:px-2 mx-auto mb-12 mt-12 desktop:mb-14 desktop:mt-24 text-color01 flex gap-3 justify-center items-center flex-col"
     >
-        <Title title="Mensaje de los novios" />
+        <Title title="Mensaje de los comandantes" />
         <span
             class="font-rubik desktop:text-xl text-center font-extralight text-gray-400"
         >
-            Un minuto, un segundo, un instante que queda en la eternidad
+            Nos complace dar una bienvenida especial a todos los que nos acompañarán en este viaje.
         </span>
         <img src={corazon.src} class="w-28 mx-auto" title="gift de corazón" />
     </div>
