--- a/src/pages/invitaciontrip.astro
+++ b/src/pages/invitaciontrip.astro
@@ -10,7 +10,7 @@ import Countdown from "../components/Countdown.astro";
 import Testimonials from "@components/Testimonials/Testimonials.astro";
 import PrincipalDate from "../components/PrincipalDate.astro";
 import Message from "@components/Message.astro";
-import Itinerario from "@components/Testimonials/Itinerario.astro";
+import Itinerario from "@components/Itinerario.astro";
 
 // data
 import siteData from "@config/siteData.json";
@@ -22,8 +22,8 @@ import siteData from "@config/siteData.json";
   navStartStyle="white"
 >
     <Heroinvtrip />
-    <Testimonials />
     <Countdown />
+    <Testimonials />
     <PrincipalDate />
     <Message />
     <Itinerario />
