--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -90,7 +90,8 @@ import maletas from '@images/Icono-viajes-boda-7.png';
         background-color: rgb(195 128 11 / 73%);
     }
     section {
-        background-image: url('/src/assets/images/Map2.jpg');
+        width: 100%;
+        background-image: url('/src/assets/images/Fondo-flores.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
