--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -10,7 +10,6 @@ import camara from '@images/Icono-Boho-3.png';
 import copas from '@images/Icono-Boho-4.png';
 import comida from '@images/Icono-Boho-5.png';
 import fiesta from '@images/Icono-Boho-7.png';
-import anillos from '@images/Icono-Boho-10.png';
 import maletas from '@images/Icono-viajes-boda-7.png';
 ---
 
@@ -89,7 +88,7 @@ import maletas from '@images/Icono-viajes-boda-7.png';
     button:hover {
         background-color: rgb(195 128 11 / 73%);
     }
-    section {
+    div {
         width: 100%;
         background-image: url('/src/assets/images/Fondo-flores.jpg');
         background-size: cover;
