--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -10,8 +10,8 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/visa.jpg";
-import heroImageMobile from "@images/visa.jpg";
+import heroImage from "@images/mapa.jpg";
+import heroImageMobile from "@images/mapa.jpg";
 ---
 
 <section
