--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -50,12 +50,6 @@ import maletas from '@images/Icono-viajes-boda-7.png';
     </div>
 </section>
 <Divider />
-<script
-    type="text/javascript"
-    src="https://cdn.addevent.com/libs/atc/1.6.1/atc.min.js"
-    async
-    defer>
-</script>
 <style>
     .title-pd {
         border-top: 1px solid #c6c6c5;
@@ -88,9 +82,9 @@ import maletas from '@images/Icono-viajes-boda-7.png';
     button:hover {
         background-color: rgb(195 128 11 / 73%);
     }
-    div {
+    section {
         width: 100%;
-        background-image: url('/src/assets/images/Fondo-flores.jpg');
+        background-image: url('/src/assets/images/FondoPasaporte.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
