Actualizar enlace y texto del botón en el componente Heroinvtrip

--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -58,10 +58,10 @@ import heroImageMobile from "@images/mapa.jpg";
         <Button
           variant="ghost"
           arrow="right"
-          href="#contact"
+          href="#Countdown"
           class="pl-0 text-xl text-white drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
         >
-          Confirmación de asistencia
+          Continuar
         </Button>
       </div>
     </div>
