--- a/src/components/Message.astro
+++ b/src/components/Message.astro
@@ -40,12 +40,14 @@ import novia    from '@images/novia.jpg';
     </div>
     <Divider />
 </section>
-section {
-    width: 100%;
-    background-image: url('/src/assets/images/Fondo6.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+<style>
+    section {
+        width: 100%;
+        background-image: url('/src/assets/images/Fondo6.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
 }
+</style>
