Agregar imágenes de la iglesia y la finca en el componente PrincipalDate.astro

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -7,6 +7,9 @@ import Divider from "@/components/Divider.astro";
 // images
 import escala from '@images/Icono-viajes-boda-6.png';
 import destino from '@images/Icono-viajes-boda-1.png';
+import iglesia from '@images/IglesiaA.jpg';
+import iglesia2 from '@images/IglesiaB.jpg';
+import sauces from '@images/Sauces.jpg';
 ---
 
 
@@ -21,11 +24,7 @@ import destino from '@images/Icono-viajes-boda-1.png';
         </div>
         <ul>
             <li>
-                <span class="text-[20px] font-normal text-[#C6C6C5]">
-                    Domingo 08 de Junio - 17hs
-                </span>
-            </li>
-            <li>
+                <img src={iglesia.src} class="h-auto max-w-full rounded-lg" alt="imagen iglesia" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Iglesia de la Asunción Molina de Segura
                 </span>
@@ -47,11 +46,7 @@ import destino from '@images/Icono-viajes-boda-1.png';
         </div>
         <ul>
             <li>
-                <span class="text-[20px] font-normal text-[#C6C6C5]">
-                    Domingo 08 de Junio - 19:30hs
-                </span>
-            </li>
-            <li>
+                <img src={sauces.src} class="h-auto max-w-full rounded-lg" alt="imagen sauces" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Finca Los Sauces
                 </span>
