--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -24,7 +24,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={iglesia.src} class="h-auto max-w-full rounded-lg" alt="imagen iglesia" />
+                <img src={iglesia2.src} class="h-auto w-48 rounded-lg" alt="imagen iglesia" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Iglesia de la Asunción Molina de Segura
                 </span>
@@ -46,7 +46,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={sauces.src} class="h-auto max-w-full rounded-lg" alt="imagen sauces" />
+                <img src={sauces.src} class="h-auto w-48 rounded-lg" alt="imagen sauces" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Finca Los Sauces
                 </span>
