Renombrar variable de imagen de la iglesia y ajustar tamaños de imagen en el componente PrincipalDate.astro

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -8,7 +8,7 @@ import Divider from "@/components/Divider.astro";
 import escala from '@images/Icono-viajes-boda-6.png';
 import destino from '@images/Icono-viajes-boda-1.png';
 import iglesia from '@images/IglesiaA.jpg';
-import iglesia2 from '@images/IglesiaB.jpg';
+import iglesiaf from '@images/IglesiaB.jpg';
 import sauces from '@images/Sauces.jpg';
 ---
 
@@ -24,7 +24,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={iglesia.src} class="h-auto w-48 rounded-lg" alt="imagen iglesia" />
+                <img src={iglesiaf.src} class="h-auto w-3/4 md:w-48 rounded-lg mx-auto" alt="imagen iglesia" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Iglesia de la Asunción Molina de Segura
                 </span>
@@ -46,7 +46,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={sauces.src} class="h-auto w-48 rounded-lg" alt="imagen sauces" />
+                <img src={sauces.src} class="h-auto w-3/4 md:w-48 rounded-lg mx-auto" alt="imagen sauces" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Finca Los Sauces
                 </span>
