Actualizar extensión de la imagen de la iglesia en el componente PrincipalDate.astro

--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -8,7 +8,7 @@ import Divider from "@/components/Divider.astro";
 import escala from '@images/Icono-viajes-boda-6.png';
 import destino from '@images/Icono-viajes-boda-1.png';
 import iglesia from '@images/IglesiaA.jpg';
-import iglesiaf from '@images/IglesiaB.jpg';
+import iglesiaf from '@images/IglesiaB.jpeg';
 import sauces from '@images/Sauces.jpg';
 ---
 
