--- a/src/components/PrincipalDate.astro
+++ b/src/components/PrincipalDate.astro
@@ -24,7 +24,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={iglesiaf.src} class="h-auto w-3/4 md:w-48 rounded-lg mx-auto" alt="imagen iglesia" />
+                <img src={iglesiaf.src} class="rounded-md max-w-sm mx-auto h-auto shadow-none transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-gray-400" alt="imagen iglesia" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Iglesia de la Asunción Molina de Segura
                 </span>
@@ -46,7 +46,7 @@ import sauces from '@images/Sauces.jpg';
         </div>
         <ul>
             <li>
-                <img src={sauces.src} class="h-auto w-3/4 md:w-48 rounded-lg mx-auto" alt="imagen sauces" />
+                <img src={sauces.src} class="rounded-md max-w-sm mx-auto h-auto shadow-none transition-shadow duration-300 cursor-pointer hover:shadow-lg hover:shadow-gray-400" alt="imagen sauces" />
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Finca Los Sauces
                 </span>
