--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -38,7 +38,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
           alt="Nuria"
           width={450}
           densities={[1.5, 2]}
-          class="h-auto min-h-full w-full min-w-full object-cover"
+          class="h-auto min-h-full w-full min-w-full object-cover rounded-t-lg"
         />
       </div>
     </div>
@@ -73,7 +73,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
           alt="Cristian"
           width={450}
           densities={[1.5, 2]}
-          class="h-auto min-h-full w-full min-w-full object-cover"
+          class="h-auto min-h-full w-full min-w-full object-cover rounded-t-lg"
         />
       </div>
     </div>
