Actualizar bordes redondeados de la imagen en el componente About.astro

--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -73,7 +73,7 @@ import profileImage2 from "@assets/images/Cristian.jpg";
           alt="Cristian"
           width={450}
           densities={[1.5, 2]}
-          class="h-auto min-h-full w-full min-w-full object-cover rounded-t-lg"
+          class="h-auto min-h-full w-full min-w-full object-cover rounded-t-3xl"
         />
       </div>
     </div>
