--- a/src/components/Hero/Heroinvtrip.astro
+++ b/src/components/Hero/Heroinvtrip.astro
@@ -64,7 +64,7 @@ import arrowdown from "@images/arrow_down.gif";
         >
           
         </Button>
-        <img src={arrowdown} class="w-14 desktop:w-20" alt="" />
+        <img src={arrowdown.src} class="w-14 desktop:w-20" alt="" />
       </div>
     </div>
   </div>
