--- a/src/layouts/PortfolioLayout.astro
+++ b/src/layouts/PortfolioLayout.astro
@@ -20,7 +20,7 @@ interface Props {
   portfolio: CollectionEntry<"portfolios">;
 }
 
-import headerImage from "@images/portfolio-header-crop-min.jpg";
+import headerImage from "@images/Globos.jpg";
 
 const { portfolio } = Astro.props as Props;
 const { title, description, date, images, clients, location, heroImage } =
