--- a/src/layouts/PortfolioLayout.astro
+++ b/src/layouts/PortfolioLayout.astro
@@ -20,7 +20,7 @@ interface Props {
   portfolio: CollectionEntry<"portfolios">;
 }
 
-import headerImage from "@images/Globos.jpg";
+import headerImage from "@images/mundo.jpg";
 
 const { portfolio } = Astro.props as Props;
 const { title, description, date, images, clients, location, heroImage } =
@@ -121,9 +121,6 @@ const otherPortfolios = await getCollection("portfolios", (otherPortfolio) => {
       }
     </div>
   </article>
-
-  <TestimonialQuote />
-
   <section class="mx-auto mt-12 px-4 md:mt-16 md:max-w-5xl">
     <h3 class="h2 text-center">Más momentos</h3>
     <PortfolioGrid portfolios={otherPortfolios} noTransitions />
